# vietnam-hearts

./: .cursorrules  .dockerignore  .env.prod  .gcloudignore  .gitignore  CHANGELOG.md  Dockerfile  GOOGLE_SHEETS_SETUP.md  LICENSE  README.md  ROUTE_REORGANIZATION_SUMMARY.md  cloud_function_scheduler.py  database_schema.sql  debug_auth.py  docker-compose.yml  docker.sh  env.template  file::memory:  pyproject.toml  pytest.ini  run.sh  scheduler.db  setup-github-actions.sh  setup.sh  test_auth.html  test_config.py
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  test.yml
agent/: CLI_README.md  README.md  __init__.py  agent.py  api.py  cli.py  config.py  facebook_integration.py  gemini_client.py  intent_detector.py  knowledge_base.py  models.py  response_generator.py  test_simplified_agent.py
alembic/: env.py
alembic/versions/: 57d3bfee129a_baseline_schema.py
app/: CHANGELOG.md  config.py  database.py  main.py  models.py  schemas.py
app/dependencies/: auth.py
app/middleware/: README.md  __init__.py  cors_middleware.py  error_handling.py  logging_middleware.py  rate_limit_middleware.py
app/routers/: admin.py  api.py  auth.py  bot.py  cloud_logs.json  home.py  messenger.py  oauth.py  public.py  settings.py  supabase_auth.py
app/routers/admin/: __init__.py  emails.py  health.py  helpers.py  logs.py  schedules.py  signups.py  users.py  volunteers.py
app/services/: admin_service.py  admin_user_service.py  auth_service.py  bot_service.py  classes_config.py  document_service.py  email_service.py  google_sheets.py  knowledge_service.py  schedule_parser.py  settings_service.py  supabase_auth.py
app/services/messenger/: __init__.py  message_sender.py  mock_message_sender.py  webhook_handler.py
app/utils/: auth.py  config_helper.py  db_log_handler.py  google_credentials.py  logging_config.py  request_helpers.py  retry_utils.py  schedule_dates.py  sentry_config.py  sheet_utils.py  timeout.py
docs/: EMAIL_ACCESS_CONTROL.md  GOOGLE_AUTH_SETUP.md  GOOGLE_SHEETS_SETUP.md  README-Docker.md  SERVICE_ACCOUNT_SETUP.md  SUPABASE_SETUP.md
docs/superpowers/plans/: 2026-07-09-rotation-ddmmyyyy-and-persistent-logs.md
scripts/: cloud_function_scheduler.py  create-or-update-scheduler-jobs.sh  deploy.config  deploy.sh  docker.sh  reembed_knowledge_base.py  setup-dev-env.sh  setup-scheduled-jobs.sh  setup-scheduler-jobs.sh
templates/: README.md  home.html
templates/admin/: dashboard.html
templates/auth/: access_denied.html  access_verification_failed.html  auth_failed.html  login.html  oauth_error.html  signin_success.html
templates/email/: base_email.html  confirmation-email.html  weekly-reminder-email.html
templates/unsubscribe/: already_unsubscribed.html  error.html  manage_preferences.html
templates/web/: base.html  home.html
templates/web/admin/: dashboard.html
templates/web/auth/: access_denied.html  access_verification_failed.html  auth_failed.html  oauth_error.html  signin_success.html
templates/web/unsubscribe/: already_unsubscribed.html  error.html  manage_preferences.html
tests/: README.md  conftest.py  debug_auth.py  pytest.ini  test_admin_logs_api.py  test_agent.py  test_api.py  test_auth_service.py  test_database.py  test_db.py  test_db_log_handler.py  test_email_preferences.py  test_email_service.py  test_faq_handling.py  test_form_submissions.py  test_google_credentials.py  test_llm_judge.py  test_logging.py  test_messenger.py  test_middleware.py  test_schedule_dates.py  test_schedule_discovery.py  test_schedule_rotation.py  test_scheduler_api.py  test_settings.py  test_zalo_integration.py
tools/: api_tester.py
