[tool.poetry]
name = "auto-scheduler"
version = "0.1.0"
description = "Vietnam Hearts Scheduling Assistant"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.116.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
google-auth = "^2.28.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.120.0"
python-dotenv = "^1.0.0"
pydantic = "2.5.0"
python-multipart = "0.0.6"
jinja2 = "^3.1.3"
psycopg2-binary = "^2.9.9"
supabase = "^2.2.0"
tenacity = "^8.2.3"
httpx = "0.28.1"
PyJWT = "^2.8.0"
google-generativeai = "^0.3.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.19.0"}

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
ruff = "^0.8.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line length is handled by the formatter
    "B904",  # pre-existing debt: ~52 call sites raise without `from err`/`from None`
             # inside except blocks (routers/services). Fixing needs a per-site read
             # to pick the right cause, so it's tracked as follow-up, not folded into
             # this lint-tooling change.
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# Disabled/WIP feature (messenger bot router not mounted in app/main.py); the
# star import predates this ruff config and isn't part of the active app.
"app/routers/bot.py" = ["F403"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection pattern relies on calls like Depends()/Query()
# as default argument values by design - not the mutable-default-arg bug B008
# normally flags.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Path", "fastapi.Header"] 