[project]
name = "auto-scheduler"
version = "0.1.0"
description = "Vietnam Hearts Scheduling Assistant"
authors = [{ name = "Viet Nguyen" }]
requires-python = ">=3.12"
# Poetry caret constraints converted to explicit PEP 440 ranges with the
# same bounds, so the resolution window matches the old poetry.lock -
# except python-multipart, deliberately widened from Poetry's ^0.0.20
# (<0.0.21) to <0.1, moving the locked version from 0.0.20 to 0.0.32.
dependencies = [
    "fastapi==0.116.0",
    "uvicorn>=0.27.0,<0.28",
    "sqlalchemy>=2.0.25,<3",
    "google-auth>=2.28.0,<3",
    "google-auth-oauthlib>=1.2.0,<2",
    "google-auth-httplib2>=0.2.0,<0.3",
    "google-api-python-client>=2.120.0,<3",
    "python-dotenv>=1.0.0,<2",
    "pydantic==2.5.0",
    "python-multipart>=0.0.20,<0.1",
    "jinja2>=3.1.3,<4",
    "psycopg2-binary>=2.9.9,<3",
    "supabase>=2.2.0,<3",
    "tenacity>=8.2.3,<9",
    "httpx==0.28.1",
    "pyjwt>=2.8.0,<3",
    "google-genai>=2.0.0,<3",
    "sentry-sdk[fastapi]>=2.19.0,<3",
    "alembic>=1.18.5,<2",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "ruff>=0.8.0,<0.9",
    "pre-commit>=4.0.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Keep the project installed as a package (like Poetry's `include = "app"`)
# so `import app` works from the venv without PYTHONPATH tricks.
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line length is handled by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# Disabled/WIP feature (messenger bot router not mounted in app/main.py); the
# star import predates this ruff config and isn't part of the active app.
"app/routers/bot.py" = ["F403"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection pattern relies on calls like Depends()/Query()
# as default argument values by design - not the mutable-default-arg bug B008
# normally flags.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Path", "fastapi.Header"]
